[package]
name = "advanced-ecdsa-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = "0.28.0"
tiny-keccak = "2.0.2"
rand = "0.8.5"
hex = "0.4.3"
sha3 = "0.10.8"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
thiserror = "1.0.48"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
